# game

./: .clang-tidy  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  circle.yml
config/: config.ini
src/: animated_sprite.cpp  animated_sprite.hpp  building.hpp  chunk.cpp  chunk.hpp  city_generator.cpp  city_generator.hpp  config.cpp  config.hpp  direction.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  level.cpp  level.hpp  main.cpp  object.hpp  player.cpp  player.hpp  poi_generator.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  vector2.cpp  vector2.hpp  world.cpp  world.hpp
src/control/: input.cpp  input.hpp
src/model/: animated_sprite.cpp  animated_sprite.hpp  building.cpp  building.hpp  character.cpp  character.hpp  chunk.cpp  chunk.hpp  city_center.cpp  city_center.hpp  city_generator.cpp  city_generator.hpp  game.hpp  graphics.cpp  graphics.hpp  input.hpp  level.cpp  level.hpp  nothing_generator.cpp  nothing_generator.hpp  npc.cpp  npc.hpp  object.cpp  object.hpp  pandoras_box.cpp  pandoras_box.hpp  player.cpp  player.hpp  sprite.cpp  sprite.hpp  tile.cpp  tile.hpp  world.cpp  world.hpp
src/util/: config.cpp  random.cpp  random.hpp  vector2.hpp
src/view/: animated_sprite.cpp  animated_sprite.hpp  character_view.cpp  character_view.hpp  chunk_drawer.cpp  chunk_drawer.hpp  graphics.cpp  graphics.hpp  npc_view.cpp  npc_view.hpp  object_drawer.cpp  object_drawer.hpp  player_view.cpp  player_view.hpp  sprite.cpp  sprite.hpp  world_view.cpp  world_view.hpp
test/unit/: chunk.cpp  sanity.cpp
util/: run-clang-tidy.py
